--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,82 +26,79 @@
 
     <main>
         <h1>White Water Rafting Company</h1>
-        <div class="grid-container">
-            <div class="grid-item">123 Main River Street</div>
-            <div class="grid-item">Kolob, Califonia</div>
-            <div class="grid-item"> +1 999 999 9999</div>
-            <div class="grid-item"> info@whitewater.com</div>
+        <div class="grid-container"></div>
+        <div class="grid-item">123 Main River Street</div>
+        <div class="grid-item">Kolob, Califonia</div>
+        <div class="grid-item"> +1 999 999 9999</div>
+        <div class="grid-item"> info@whitewater.com</div>
 
-            <div class="box">
-                <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3203.990395152498!2d-122.0745062098707!3d38.26511747635922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1759414794750!5m2!1sen!2sng"
-                        width="650" height="450" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-
-                <form>
-                    <fieldset>
-                        <div class="form-itemcolumn1">
-                            <label for="name">Name:</label>
-                            <input type="text" id="name" name="name" placeholder="Placeholder">
-                        </div>
-
-                        <div class="form-itemcolumn1">
-                            <label for="useremail">Email:</label>
-                            <input type="email" id="useremail" name="useremail" placeholder="Placeholder">
-                        </div>
-                    </fieldset>
-
-                    <div class="message">
-                        <p1>Message Purpose</p1>
-
-                        <div class="column2">
-                            <input type="radio" id="generalinquiry" name="message_purpose">
-                            <label for="generalinquiry">General Inquiry</label><br>
-                            <input type="radio" id="reservationquestion" name="message_purpose">
-                            <label for="reservationquestion">Reservation Question</label><br>
-                            <input type="radio" id="websitesuggestion" name="message_purpose">
-                            <label for="websitesuggestion">Website Suggestion</label>
-                        </div>
-                    </div>
-
-                    <div class="column3">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" placeholder="Type here"></textarea>
-                    </div>
-                    <div class="form-itemcolumn4">
-                        <input type="checkbox" id="action" name="action">
-                        <label for="action">Please Subscribe me to the monthly newsletter</label>
-                    </div>
-
-                    <button type="get-in-touch">Get in Touch!</button>
-                </form>
+        <div class="box">
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3203.990395152498!2d-122.0745062098707!3d38.26511747635922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1759414794750!5m2!1sen!2sng"
+                    width="650" height="450" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <div class="staff">
-                <h2> We Are Here to Serve You</h2>
-                <div class="employees">
-                    <figure>
-                        <img src="../wwr/images/genman.jpg" alt="General manager">
-                        <figcaption> Asa Itam-Eyo </figcaption>
-                        <flow content>General Manager</flow content>
-                    </figure>
+            <form>
+                <fieldset>
+                    <div class="form-itemcolumn1">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" placeholder="Placeholder">
+                    </div>
 
-                    <figure>
-                        <img src="../wwr/images/proman.jpg" alt="Project manager">
-                        <figcaption> Agbo Etim </figcaption>
-                        <flow content>Project Manager </flow content>
-                    </figure>
+                    <div class="form-itemcolumn1">
+                        <label for="useremail">Email:</label>
+                        <input type="email" id="useremail" name="useremail" placeholder="Placeholder">
+                    </div>
+                </fieldset>
 
-                    <figure>
-                        <img src="../wwr/images/pubman.jpg" alt="Public Relations Officer">
-                        <figcaption> Thelma Bassey</figcaption>
-                        <flow content> Public Relations Officer</flow content>
-                    </figure>
+                <div class="message">
+                    <d1>Message Purpose</d1>
+
+                    <div class="column2">
+                        <input type="radio" id="generalinquiry" name="message_purpose">
+                        <label for="generalinquiry">General Inquiry</label><br>
+                        <input type="radio" id="reservationquestion" name="message_purpose">
+                        <label for="reservationquestion">Reservation Question</label><br>
+                        <input type="radio" id="websitesuggestion" name="message_purpose">
+                        <label for="websitesuggestion">Website Suggestion</label>
+                    </div>
                 </div>
-            </div>
 
+                <div class="column3">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" placeholder="Type here"></textarea>
+                </div>
+                <div class="form-itemcolumn4">
+                    <input type="checkbox" id="action" name="action">
+                    <label for="action">Please Subscribe me to the monthly newsletter</label>
+                </div>
+
+                <button type="get">Get in Touch!</button>
+            </form>
+        </div>
+
+        <div class="staff">
+            <h2> We Are Here to Serve You</h2>
+            <div class="employees">
+                <figure>
+                    <img src="../wwr/images/genman.jpg" alt="General manager">
+                    <figcaption> Asa Itam-Eyo<br> General Manager</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="../wwr/images/proman.jpg" alt="Project manager">
+                    <figcaption> Agbo Etim <br> Project Manager</figcaption>
+
+                </figure>
+
+                <figure>
+                    <img src="../wwr/images/pubman.jpg" alt="Public Relations Officer">
+                    <figcaption> Thelma Bassey<br> Public Relations Officer </figcaption>
+                    <flow content> </flow content>
+                </figure>
+            </div>
     </main>
 
     <footer>
