--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contact Us- White Water Rafting Company</title>
     <meta name="description"
-        content="We look forward to hearing from you as plan towards a fun filled rafting experience.">
+        content="We look forward to hearing from you as we plan towards a fun filled rafting experience.">
     <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -54,7 +54,7 @@
                 </fieldset>
 
                 <div class="message">
-                    <d1>Message Purpose</d1>
+                    <p>Message Purpose</p>
 
                     <div class="column2">
                         <input type="radio" id="generalinquiry" name="message_purpose">
@@ -75,7 +75,7 @@
                     <label for="action">Please Subscribe me to the monthly newsletter</label>
                 </div>
 
-                <button type="get">Get in Touch!</button>
+                <button type="submit" name="action" value="get in touch">Get in Touch!</button>
             </form>
         </div>
 
@@ -99,6 +99,7 @@
                     <flow content> </flow content>
                 </figure>
             </div>
+        </div>
     </main>
 
     <footer>
