update rafting site

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home page- Water Rafting Company </title>
+    <meta name="description"
+        content="Introducing you to our breathtaking, memorable and fun-filled water rafting experience.">
+    <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
