--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,8 @@
             <h1>White Water Rafting Company</h1>
             <article>
                 <img src="images/img.jpg" alt="Happy client">
-                <p> At White Water Rafting Company, we are passionate about providing thrilling and unforgettable
+                <p> At <strong>White Water Rafting Company,</strong> we are passionate about providing thrilling and
+                    unforgettable
                     rafting experiences. Our team of experienced guides is dedicated to ensuring your safety and
                     enjoyment on the water. </p>
             </article>
@@ -37,14 +38,26 @@
 
         <h2>History</h2>
         <section class="history">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, recusandae. Lorem ipsum dolor,
-                sit amet consectetur adipisicing elit. Officiis fugiat iure id, dolores minima eum quos veritatis!
-                Repudiandae
-                error non corporis porro laboriosam consectetur eos debitis eaque sint, possimus a!</p>
+            <p><strong>Whitewater rafting </strong> has its roots in the mid-19th century, when rubber rafts were first
+                employed by
+                military expeditions
+                to explore uncharted rivers. It wasn't until the 1970s, however, that the activity gained popularity as
+                a recreational sport.
+                Since then, whitewater rafting has significantly evolved, thanks to advancement in safety measures and
+                equipments- making the
+                thrill of the rapids accessible to a much wider audience.
+            </p>
             <img src="../wwr/images/history.jpg" alt="Water Rafting History">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, tenetur iusto beatae reiciendis
-                fuga temporibus, aut doloribus nulla quasi quia error ex harum nobis minima doloremque aspernatur, ipsam
-                totam eaque.</p>
+            <p>The term"whitewater" refers to the frothy, fast-moving water created as a river flows over rocks, sudden
+                drops and other natural
+                obstacles. Rapids are classified by difficulty on a scale from Class I (easy and gentle) to Class
+                V (extremely challenging and technical),
+                offering options for every skill level- from beginners to seasoned adventurers. At white water rafting,
+                expert guidance is provided from
+                experienced instructors. What began as a modest means of exploration has since grown into a globally
+                popular activity, attracting adventure
+                enthusiasts from all corners of the world.
+            </p>
 
 
         </section>
