--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,7 +30,8 @@
             <h1>White Water Rafting Company</h1>
             <article>
                 <img src="images/img.jpg" alt="Happy client">
-                <p> At White Water Rafting Company, we are passionate about providing thrilling and unforgettable
+                <p> At <strong>White Water Rafting Company,</strong> we are passionate about providing thrilling and
+                    unforgettable
                     rafting experiences. Our team of experienced guides is dedicated to ensuring your safety and
                     enjoyment on the water. </p>
             </article>
