--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -45,7 +45,7 @@
 
                 <div class="image">
                     <figure> <img src="../wwr/images/agbokim-waterfalls.jpg" alt="Abokim Waterfalls" class=trips3>
-                        <figcaption>Waterfalls</figcaption>
+                        <figcaption>Agbokim Waterfalls</figcaption>
                     </figure>
 
                     <ul>
@@ -106,7 +106,7 @@
                             <td>30th Oct. 25</td>
                             <td>12.00noon</td>
                             <td>$30</td>
-                            <td>Abokim water falls</td>
+                            <td>Agbokim water falls</td>
                         </tr>
                         <tr>
                             <th scope="row">Saturday</th>
@@ -127,7 +127,7 @@
                             <td>14th Nov. 25</td>
                             <td>9.00am</td>
                             <td>$50</td>
-                            <td>Abokim water falls</td>
+                            <td>Agbokim water falls</td>
                         </tr>
                         <tr>
                             <th scope="row">Saturday</th>
