update call to action on trips and index page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -74,17 +74,21 @@
 
         <div class="join">
             <div class="join1">
-                <p1>From our spectacular seven streams tumbling over the cliff: Seven-faced wonder of nature at
+                <p>From our spectacular seven streams tumbling over the cliff: Seven-faced wonder of nature at
                     <strong>Abokim waterfalls</strong> to our breathtaking cascading waterfalls at <strong>Kwa
                         falls</strong> and our various hiking and
-                    camping packages, we offer you an unforgettable fun filled experience.
-                </p1>
-                <div class="visit">
-                    <button type="submit" name="action" value="visit us now">Visit us now!</button>
+                    camping packages, we offer you an unforgettable fun filled experience.<br> <em>Ready to ride the
+                        rapids?
+                        Explore our guided trips! </em>
+                </p>
+
+                <div class="cta">
+                    <a href="trips.html" class="cta-button">View Our Trips </a>
                 </div>
             </div>
 
-            <div class="join2">
+
+            <div class=" join2">
                 <p2>Sign up for our bimonthly newsletter update on new exciting rafting events!!!</p2>
 
                 <form>
