--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -146,7 +146,7 @@
                     </tbody>
                 </table>
                 <div class="contact">
-                    <button type="submit" name="action" value="Contact Us">Contact Us!</button>
+                    <a href="contact.html" class="cta-button">Contact Us!</a>
                 </div>
             </div>
         </div>
