--- a/wwr/index.html
+++ b/wwr/index.html
@@ -77,10 +77,10 @@
                 <p>From our spectacular seven streams tumbling over the cliff: Seven-faced wonder of nature at
                     <strong>Abokim waterfalls</strong> to our breathtaking cascading waterfalls at <strong>Kwa
                         falls</strong> and our various hiking and
-                    camping packages, we offer you an unforgettable fun filled experience.<br> <em>Ready to ride the
-                        rapids?
-                        Explore our guided trips! </em>
+                    camping packages, we offer you an unforgettable fun filled experience.
                 </p>
+
+                <p class="cta-text"><strong><em> Ready to ride the rapids? Explore our guided trips</em></strong>
 
                 <div class="cta">
                     <a href="trips.html" class="cta-button">View Our Trips </a>
